# dolphin-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cogs/: misc.py  seasonal.py  staff.py
cogs/help/: __init__.py  cog.py  help.py
cogs/seasonal/: '  __init__.py  cog.py  modals.py  objects.py  utils.py  views.py
core/: __init__.py  bot.py
